# tryml

./: .gitignore  CODEOWNERS  LICENSE  README.md  sam_generator.ipynb  sam_mask_generator.ipynb
libs/datasets/: README.md  pyproject.toml  requirements.txt
libs/datasets/nitesr/datasets/kaggle/: __init__.py  download.py
libs/datasets/tests/: test_kaggle_download.py
libs/model_selection/: README.md  pyproject.toml  requirements.txt
libs/model_selection/nitesr/model_selection/: __init__.py
libs/model_selection/tests/: test_cluster_grid_search.py
notebooks/: try_colab.ipynb
notebooks/RL/: RL_1_Live_Code.ipynb  RL_2_Live_Code.ipynb  RL_2_MCQ.ipynb
notebooks/auto-encoders/: vae_fashion_MNIST.ipynb
notebooks/cv/: vgg16_and_siamese_on_att.ipynb  vgg16_on_cifar-10.ipynb
notebooks/cv/group-emotion/: dataset.py  group-fer-mini-project-2.ipynb  imagewrapper.py  notes.txt  robowrapper.py  test-robo.ipynb  try-deep-face.ipynb  utils.py  widerface.py
notebooks/fund-analysis/: Historical-Federal-Individual-Income-Tax-Rates-and-Brackets.csv  stock-utils.ipynb
notebooks/gen-ai/toxicity/: toxicity.ipynb  toxicity_multihead.ipynb
notebooks/gnn/: gnn_link_prediction.ipynb
notebooks/gradient/: gradient-examples.ipynb  nx.html
notebooks/intro_nn/: Intro_to_nn.ipynb  intro_to_backprop.ipynb  mnist_nn.ipynb
notebooks/nlp/: find-top-k-reviewers.ipynb
notebooks/nn_arch/: cnn_digit_recognizer.ipynb  cnn_letter_recognizer.ipynb  gan_fashion_generator.ipynb  rnn_djia_stocks_predictor.ipynb  vanillarnn_djia_stocks_predictor.ipynb
projects/RL/: RL 1_Assignment.ipynb  RL_1_MCQ.ipynb  RL_2_Assignment.ipynb
projects/auto-encoders/notebooks/: autoencoders_anamoly.ipynb  vae_fashion_MNIST.ipynb
projects/cv/: OWL_ViT_inference_playground.ipynb
projects/gnn/: gnn_classify_research_papers.ipynb
projects/gradient/: gradient-examples.ipynb
projects/intro_nn/: gradient_tape.ipynb
projects/miniproject-groupemotion/: README.md  requirements.txt
projects/miniproject-groupemotion/docs/: notes.txt
projects/miniproject-groupemotion/libs/helpers/: dataset.py  widerface.py
projects/miniproject-groupemotion/notebooks/: group-fer-mini-project-2.ipynb
projects/miniproject-groupemotion/notebooks/archive/: test-deep-face.ipynb
projects/miniproject-groupemotion/scripts/: setup_env.sh
projects/mlops/: README.md  notes.txt
projects/mlops-k8deploy/: README.md  dev-requirements.txt  requirements.txt
projects/mlops-k8deploy/apps/flower-predictor/: DockerFile
projects/mlops-k8deploy/docs/: notes.txt
projects/mlops-k8deploy/libs/: pyproject.toml
projects/mlops-k8deploy/libs/flower_predictor/: predict.py
projects/mlops-k8deploy/notebooks/: iris_load_and_train.ipynb  playground.ipynb
projects/mlops-model-train/: README.md  dev-requirements.txt  requirements.txt
projects/mlops-model-train/apps/imagenet_objdetector /: DockerFile
projects/mlops-model-train/libs/: pyproject.toml
projects/mlops-model-train/libs/imagenet_classify_trainer/: data.py  metrics.py  model.py  train.py
projects/mlops-model-train/libs/imagenet_classify_trainer/config/: __init__.py
projects/mlops-model-train/libs/imagenet_classify_trainer/pipeline/: __init__.py  base_pipeline.py  data_parallel.py  single_thread.py
projects/mlops-model-train/notebooks/: playground.ipynb
projects/mlops-restapi/: .dockerignore  README.md  dev-requirements.txt  requirements.txt
projects/mlops-restapi/apps/cats_dogs_classifier/: DockerFile
projects/mlops-restapi/libs/: pyproject.toml
projects/mlops-restapi/libs/cats_dogs_classifier/: download.py  predict.py  train.py
projects/mlops-restapi/libs/cats_dogs_classifier/config/: __init__.py
projects/mlops-restapi/notebooks/: playground.ipynb
projects/mlops/aws_serverless/: Dockerfile  pyproject.toml
projects/mlops/aws_serverless/notebooks/: deploying_lambda.ipynb
projects/mlops/aws_serverless/scripts/: template_no_auth.yaml
projects/mlops/aws_serverless/src/: pyproject.toml
projects/mlops/scripts/: setup_dl_ec2_instance.sh
projects/mlops/scripts/ec2/: Dockerfile  setup_mlflow_in_ec2.sh
projects/nlp/: questions.txt
projects/pytorch-dist/: README.md  requirements.txt
projects/pytorch-dist/libs/: pyproject.toml
projects/pytorch-dist/libs/pytorch_dist/: coll_com.py  dist_train.py  initproc.py
projects/pytorch-dist/libs/pytorch_dist/config/: __init__.py
projects/pytorch-dist/libs/pytorch_dist/ddataset/: __init__.py  data_partition.py  minst_dataset.py  partition.py
projects/pytorch-dist/libs/pytorch_dist/models/: __init__.py  minst_net.py
projects/pytorch-dist/notebooks/: playground.ipynb
projects/supervised1/: README.md  requirements.txt
projects/supervised1/docs/: decision_trees_q.txt  instagram_ad_system.txt  linear_reg_q.txt
projects/supervised1/libs/: pyproject.toml
projects/supervised1/notebooks/: ensemble_learning.ipynb  house_pricing_linear.ipynb  playground.ipynb  sl_i_coding_assignment.ipynb  sl_ii_coding_assignment.ipynb  unsupervised_coding_assignment.ipynb
scripts/: setup-project-env.sh
src/mlops/: Dockerfile  README.md
src/mlops/scripts/: setup_dl_ec2_instance.sh  validate_and_start_bash.sh
src/mlutils/: __init__.py  _cluster_grid_search.py  _hidden_layer_estimator.py
src/notebooks/RL/: notes.txt
src/notebooks/auto-encoders/: autoencoders_emojis.ipynb
src/notebooks/cv/: yolo_resnet_detect_and_find_similar_items.ipynb
src/notebooks/cv/group-emotion/: utils.py
src/notebooks/fund-analysis/: downloader.ipynb
src/notebooks/intro_nn/: simple_perceptron.ipynb
src/notebooks/intro_pytorch/: intro_to_pytorch.ipynb  pytorch_assignment.ipynb
src/notebooks/nn_arch/: fnn_digit_recognizer.ipynb  fnn_laptop_price_predictor.ipynb  rnn_lstm_ny_stock_predictor.ipynb
src/notebooks/rcf/: product-pairs.ipynb
templates/project/: README.md  cookiecutter.json
templates/project/{{cookiecutter.project_slug}}/: README.md
templates/project/{{cookiecutter.project_slug}}/libs/: pyproject.toml
templates/pylibrary/: README.md  cookiecutter.json
templates/pylibrary/{{cookiecutter.module_name}}/: pyproject.toml
(+12 files in other folders)
