[tool.poetry]
name = "aws-serverless-py"
version = "0.0.1"
authors = []
description = "python code for the project aws_serverless"

[tool.poetry.dependencies]
python = "^3.9"
joblib = "^1.1.0"
scikit-learn = "^1.0.2"
numpy = "^1.21.5"
pandas = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
